--- a/css/main.css
+++ b/css/main.css
@@ -14212,10 +14212,12 @@ a.badge-alternate:hover, a.badge-alternate:focus {
     border-bottom-left-radius: .25rem
 }
 
+/*
 .modal-dialog {
     box-shadow: 0 0.76875rem 2.4875rem rgba(52, 58, 64, 0.3), 0 1.3375rem 1.70625rem rgba(52, 58, 64, 0.3), 0 0.55rem 0.53125rem rgba(0, 0, 0, 0.05), 0 0.225rem 0.4375rem rgba(52, 58, 64, 0.3);
     border-radius: .25rem
 }
+*/
 
 .nav-item .nav-link {
     font-weight: normal
