--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,13 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+#dashboard-logo {
+  max-width: 100px;
+  height: auto;
+}
+
+.app-header, .scrollbar-sidebar {
+  background-color: #50AD92;
+}
+
+#user-info {
+  color: white;
+}
+/*# sourceMappingURL=style.css.map */
