--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,73 @@
+#login-body {
+  background-color: #50AD92;
+}
+
+.flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#login-form {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 20px;
+  width: 50vw;
+  min-height: 60vh;
+  background-color: white;
+  border-radius: 35px;
+  -webkit-box-shadow: 0 10px 8px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 10px 8px rgba(0, 0, 0, 0.5);
+}
+
+#content-div {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 20px;
+  width: 75vw;
+  min-height: 60vh;
+  border-radius: 35px;
+  -webkit-box-shadow: 0 10px 8px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 10px 8px rgba(0, 0, 0, 0.5);
+}
+
+#login-form div {
+  width: 18vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: space-around;
+      -ms-flex-align: space-around;
+          align-items: space-around;
+  padding: 7px;
+  padding-right: 35px;
+}
+
+#login-btn {
+  margin: 10px;
+}
+
 #dashboard-logo {
   max-width: 100px;
   height: auto;
